--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Object.defineProperty(window, 'ysmm', {
 
 		<!-- GOOGLE FONTS : begin -->
 		<link href="https://raw.githack.com/MaungPauk/tpress/mp/css(1).css" rel="stylesheet" type="text/css">
-		
+		<link href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet'/>
 		<!-- GOOGLE FONTS : end -->
 
         <!-- STYLESHEETS : begin -->
