--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Object.defineProperty(window, 'ysmm', {
 							<!-- Logo dimensions can be changed in library/css/custom.css
 							You can remove "m-large-logo" class from following element to use standard (smaller) version of logo -->
 							<div class="header-branding m-large-logo">
-								<a href="http://demos.lsvr.sk/townpress.html/demo/index.html"><span>
+								<a href="/"><span>
 									<img src="http://demos.lsvr.sk/townpress.html/demo/images/header-logo.png" data-hires="http://demos.lsvr.sk/townpress.html/demo/images/header-logo.2x.png" alt="TownPress - Municipality HTML Template">
 								</span></a>
 							</div>
@@ -126,7 +126,7 @@ Object.defineProperty(window, 'ysmm', {
 							and standard header menu (only if Header element has "m-has-standard-menu" class) -->
 							<nav class="header-menu">
 								<ul>
-									<li class="m-has-submenu"><a href="http://demos.lsvr.sk/townpress.html/demo/index.html">Home</a>
+									<li class="m-has-submenu"><a href="/">Home</a>
 										<ul>
 											<li class="m-penultimate"><a href="http://demos.lsvr.sk/townpress.html/demo/index.html">Home 1</a></li>
 											<li class="m-last"><a href="http://demos.lsvr.sk/townpress.html/demo/home-2.html">Home 2</a></li>
