--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Object.defineProperty(window, 'ysmm', {
 								<ul>
 									<li class="m-has-submenu"><a href="/">Home</a>
 										<ul>
-											<li class="m-penultimate"><a href="http://demos.lsvr.sk/townpress.html/demo/index.html">Home 1</a></li>
+											<li class="m-penultimate"><a href="/">Home 1</a></li>
 											<li class="m-last"><a href="http://demos.lsvr.sk/townpress.html/demo/home-2.html">Home 2</a></li>
 										</ul>
 									<button class="submenu-toggle" type="button"><i class="fa"></i></button></li>
