--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Object.defineProperty(window, 'ysmm', {
 
 		<!-- GOOGLE FONTS : begin -->
 		<link href="https://raw.githack.com/MaungPauk/tpress/mp/css(1).css" rel="stylesheet" type="text/css">
-		
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eumbg33EfHRpbzLIm0lGs0JresLNj7c+5beuRW4d11/vF3Wv3YYmuudfOwMsCmp5" crossorigin="anonymous">
 		<!-- GOOGLE FONTS : end -->
 
         <!-- STYLESHEETS : begin -->
