--- a/index.html
+++ b/index.html
@@ -1,50 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <script>
-Object.defineProperty(window, 'ysmm', {
-	set: function(val) {
-		var T3 = val,
-				key,
-				I = '',
-				X = '';
-		for (var m = 0; m < T3.length; m++) {
-			if (m % 2 == 0) {
-				I += T3.charAt(m);
-			} else {
-				X = T3.charAt(m) + X;
-			}
-		}
-		T3 = I + X;
-		var U = T3.split('');
-		for (var m = 0; m < U.length; m++) {
-			if (!isNaN(U[m])) {
-				for (var R = m + 1; R < U.length; R++) {
-					if (!isNaN(U[R])) {
-						var S = U[m]^U[R];
-						if (S < 10) {
-							U[m] = S;
-						}
-						m = R;
-						R = U.length;
-					}
-				}
-			}
-		}
-		T3 = U.join('');
-		T3 = window.atob(T3);
-		T3 = T3.substring(T3.length - (T3.length - 16));
-		T3 = T3.substring(0, T3.length - 16);
-		key = T3;
-		if (key && (key.indexOf('http://') === 0 || key.indexOf("https://") === 0)) {
-			document.write('<!--');
-			window.stop();
-
-			window.onbeforeunload = null;
-			window.location = key;
-		}
-	}
-});
-</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}
+ <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}
 </style><style>.gm-control-active>img{box-sizing:content-box;display:none;left:50%;pointer-events:none;position:absolute;top:50%;transform:translate(-50%,-50%)}.gm-control-active>img:nth-child(1){display:block}.gm-control-active:hover>img:nth-child(1),.gm-control-active:active>img:nth-child(1){display:none}.gm-control-active:hover>img:nth-child(2),.gm-control-active:active>img:nth-child(3){display:block}
 </style><link type="text/css" rel="stylesheet" href="https://raw.githack.com/MaungPauk/tpress/mp/css.css"><style>.gm-ui-hover-effect{opacity:.6}.gm-ui-hover-effect:hover{opacity:1}
 </style><style>.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px;box-sizing:border-box}
@@ -213,7 +169,7 @@ Object.defineProperty(window, 'ysmm', {
 			<!-- To add more images just copy and edit elements with "image-layer" class (see home-2.html template for example)
 			Change autoplay speed with "data-autoplay" attribute (in seconds), works only if there are more than one image -->
 			<div class="header-image" data-autoplay="8">
-				<div class="image-layer" style="background-image: url( &#39;images/header-01.jpg&#39; );"></div>
+				<div class="image-layer" style="background-image: url( &#39;http://demos.lsvr.sk/townpress.html/demo/images/header-01.jpg&#39; );"></div>
 				<!-- div class="image-layer" style="background-image: url( 'images/header-02.jpg' );"></div -->
 			</div>
 			<!-- HEADER IMAGE : begin -->
