--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			<!-- To add more images just copy and edit elements with "image-layer" class (see home-2.html template for example)
 			Change autoplay speed with "data-autoplay" attribute (in seconds), works only if there are more than one image -->
 			<div class="header-image" data-autoplay="8">
-				<div class="image-layer" style="background-image: url( &#39;http://demos.lsvr.sk/townpress.html/demo/images/header-01.jpg&#39; );"></div>
+				<div class="image-layer" style="background-image: url( 'http://demos.lsvr.sk/townpress.html/demo/images/header-01.jpg' );"></div>
 				<!-- div class="image-layer" style="background-image: url( 'images/header-02.jpg' );"></div -->
 			</div>
 			<!-- HEADER IMAGE : begin -->
