--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 										<h3 class="widget-title m-has-ico"><i class="widget-ico tp tp-pictures"></i>Featured Gallery</h3>
 										<div class="widget-content">
 											<div class="gallery-image" title="Streets of TownPress">
-												<a href="http://demos.lsvr.sk/townpress.html/demo/gallery-detail.html"><img src="./TownPress - Municipality HTML Template_files/featured-gallery-01.jpg" alt=""></a>
+												<a href="http://demos.lsvr.sk/townpress.html/demo/gallery-detail.html"><img src="http://demos.lsvr.sk/townpress.html/demo/images/featured-gallery-01.jpg" alt=""></a>
 											</div>
 											<p class="show-all-btn"><a href="http://demos.lsvr.sk/townpress.html/demo/gallery-list.html">See All Galleries</a></p>
             							</div>
