--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 								<div class="widget image-widget">
 									<div class="widget-inner">
 										<div class="widget-content">
-											<a href="http://demos.lsvr.sk/townpress.html/demo/#"><img src="./TownPress - Municipality HTML Template_files/poster-01.jpg" alt=""></a>
+											<a href="http://demos.lsvr.sk/townpress.html/demo/#"><img src="http://demos.lsvr.sk/townpress.html/demo/images/poster-01.jpg" alt=""></a>
 										</div>
 									</div>
 								</div>
